--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "decimal.js": "^10.5.0",
     "element-plus": "^2.9.11",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
