--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.13",
     "decimal.js": "^10.5.0",
     "element-plus": "^2.9.11",
+    "lodash": "^4.17.21",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
