--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
     "decimal.js": "^10.5.0",
     "element-plus": "^2.9.11",
