--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "dayjs": "^1.11.13",
     "decimal.js": "^10.5.0",
     "element-plus": "^2.9.11",
+    "html5-qrcode": "^2.3.8",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
     "vue": "^3.5.13",
+    "vue-qrcode-reader": "^5.7.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "prettier": "3.5.3",
     "vite": "^6.2.4",
