--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "html5-qrcode": "^2.3.8",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
+    "node-forge": "^1.3.1",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
     "vue-qrcode-reader": "^5.7.2",
     "vue-router": "^4.5.1"
