--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^2.9.11",
     "html5-qrcode": "^2.3.8",
     "jsencrypt": "^3.3.2",
+    "jsqr": "^1.4.0",
     "lodash": "^4.17.21",
     "node-forge": "^1.3.1",
     "socket.io-client": "^4.8.1",
